(menhir (modules parser))

(ocamllex lexer)

( library
  ( name
      smyth
  )
  ( public_name
      smyth
  )
  ( libraries
      ; user libraries
      stdlib2

      ; opam libraries
      unix bark core
  )
  ( flags
      ; (-open Pervasives2)
      (-open Pervasives2 -w +a-4-9-42-48 -warn-error -a+1..66-3-33-44-40)
  )
  ( ocamlopt_flags
      (-O3)
  )
)
